use css components

--- a/react-complete-guide/src/containers/App.css
+++ b/react-complete-guide/src/containers/App.css
@@ -1,6 +1,3 @@
-.App {
-  text-align: center;
-}
 
 .red {
   color: red;
@@ -8,4 +5,7 @@
 
 .bold {
   font-weight: bold;
+}
+.Rafa {
+  background-color: black;
 }
