--- a/react-complete-guide/src/components/Persons/Person/Person.css
+++ b/react-complete-guide/src/components/Persons/Person/Person.css
@@ -1,8 +1,15 @@
 .Person {
     width: 60%;
-    margin: 20px auto;
-    border: 1px solid #666;
-    box-shadow: 0 2px 4px #333;
-    padding: 20px;
+    margin: 16px auto;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    padding: 16px;
     text-align: center;
-}
+  }
+  
+  @media (min-width: 500px) {
+    .Person {
+      width: 450px;
+    }
+  }
+  
