--- a/react-complete-guide/src/containers/App.css
+++ b/react-complete-guide/src/containers/App.css
@@ -1,11 +1,7 @@
+.App {
+  text-align: center;
+}
 
 .red {
   color: red;
-}
-
-.bold {
-  font-weight: bold;
-}
-.Rafa {
-  background-color: black;
 }
